force-app/main/default/objects/Mst_Types__c/Mst_Types__c.object-meta.xml
<CustomObject>
    <label>型式</label>
    <nameField>
        <label>型式名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>