force-app/main/default/objects/Mst_Types__c/fields/body_type_code__c.field-meta.xml
<CustomField>
    <fullName>body_type_code__c</fullName>
    <description>山本</description>
    <label>形状</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>軽自動車</fullName>
            </value>
            <value>
                <fullName>001</fullName>
                <label>セダン</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>SUV</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>ミニバン・ワンボックス</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>クーペ</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>ハッチバック</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>ワゴン</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>バン</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>トラック</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>バイク</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>オープン・コンバーチブル</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>バス</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>ピックアップ</label>
            </value>
            <value>
                <fullName>999</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>