force-app/main/default/objects/Mst_Types__c/fields/catalog_height_max__c.field-meta.xml
<CustomField>
    <fullName>catalog_height_max__c</fullName>
    <label>カタログ 高さ 最大</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>