force-app/main/default/objects/Mst_Types__c/fields/catalog_width_max__c.field-meta.xml
<CustomField>
    <fullName>catalog_width_max__c</fullName>
    <label>カタログ 幅 最大</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>