force-app/main/default/objects/Mst_Types__c/fields/is_hybrid__c.field-meta.xml
<CustomField>
    <fullName>is_hybrid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>山本</description>
    <label>ハイブリッド</label>
    <type>Checkbox</type>
</CustomField>