force-app/main/default/objects/Mst_Types__c/fields/maker_code__c.field-meta.xml
<CustomField>
    <fullName>maker_code__c</fullName>
    <label>メーカコード</label>
    <length>8</length>
    <type>Text</type>
</CustomField>