force-app/main/default/objects/Mst_Types__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>型式</relationshipLabel>
    <relationshipName>type_models</relationshipName>
    <type>Lookup</type>
</CustomField>