force-app/main/default/objects/Mst_Types__c/fields/model_code__c.field-meta.xml
<CustomField>
    <fullName>model_code__c</fullName>
    <label>車種コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>