force-app/main/default/objects/Mst_Types__c/fields/Model_en__c.field-meta.xml
<CustomField>
    <fullName>Model_en__c</fullName>
    <formula>model__r.model_name_eizi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>